--- a/docs/modules/agents.mdx
+++ b/docs/modules/agents.mdx
@@ -222,7 +222,7 @@ This is the recommended agent. Currently only supported in Python.
 
 This agent provides the reliability needed for production scenarios through a rule system that defines execution constraints while keeping problem-solving flexibility intact. Unlike traditional approaches that require complex orchestration code, RequirementAgent uses a declarative interface where you define requirements and let the framework enforce them automatically.
 
-Learn more about RequirementAgent in our [RequirementAgent documentation](experimental/requirement-agent) and [blog post](https://beeai.dev/blog/reliable-ai-agents).
+Learn more about RequirementAgent in our [RequirementAgent documentation](../experimental/requirement-agent) and [blog post](https://beeai.dev/blog/reliable-ai-agents).
 
 ```py Python [expandable]
 from beeai_framework.agents.experimental import RequirementAgent
