feat(adapters): update A2AServer and events (#1130)
Signed-off-by: Lukáš Janeček <xjacka@gmail.com>

--- a/docs/integrations/a2a.mdx
+++ b/docs/integrations/a2a.mdx
@@ -30,7 +30,8 @@ The **[Agent2Agent (A2A) Protocol](https://a2a-protocol.org/)** is the open stan
 	import sys
 	import traceback
 	
-	from beeai_framework.adapters.a2a.agents import A2AAgent
+	from beeai_framework.adapters.a2a.agents import A2AAgent, A2AAgentUpdateEvent
+	from beeai_framework.emitter import EventMeta
 	from beeai_framework.errors import FrameworkError
 	from beeai_framework.memory.unconstrained_memory import UnconstrainedMemory
 	from examples.helpers.io import ConsoleReader
@@ -42,10 +43,12 @@ The **[Agent2Agent (A2A) Protocol](https://a2a-protocol.org/)** is the open stan
 	    agent = A2AAgent(url="http://127.0.0.1:9999", memory=UnconstrainedMemory())
 	    for prompt in reader:
 	        # Run the agent and observe events
-	        response = await agent.run(prompt).on(
-	            "update",
-	            lambda data, event: (reader.write("Agent 🤖 (debug) : ", data)),
-	        )
+	        def print_update(data: A2AAgentUpdateEvent, event: EventMeta) -> None:
+	            value = data.value
+	            debug_info = value[1] if isinstance(value, tuple) else value
+	            reader.write("Agent 🤖 (debug) : ", str(debug_info))
+	
+	        response = await agent.run(prompt).on("update", print_update)
 	
 	        reader.write("Agent 🤖 : ", response.last_message.text)
 	
@@ -130,7 +133,7 @@ The **[Agent2Agent (A2A) Protocol](https://a2a-protocol.org/)** is the open stan
 	    # we use LRU memory manager to keep limited amount of sessions in the memory
 	    A2AServer(
 	        config=A2AServerConfig(port=9999, protocol="jsonrpc"), memory_manager=LRUMemoryManager(maxsize=100)
-	    ).register(agent).serve()
+	    ).register(agent, send_trajectory=True).serve()
 	
 	
 	if __name__ == "__main__":
